objects/Discount_Rule__mdt.object
<CustomObject>
    <fields>
        <fullName>Discount_Percentage__c</fullName>
        <label>Discount Percentage</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_Category__c</fullName>
        <label>Product Category</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Segment__c</fullName>
        <label>Product Segment</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Validity__c</fullName>
        <label>Product Validity</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Rule_Name__c</fullName>
        <label>Rule Name</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>category__c</fullName>
        <label>category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Electronics</fullName>
                    <default>true</default>
                    <label>Electronics</label>
                </value>
                <value>
                    <fullName>Fashion</fullName>
                </value>
                <value>
                    <fullName>Food</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Discount Rule</label>
    <pluralLabel>Discount Rules</pluralLabel>
</CustomObject>